Fixing broken markdown images taking up too much space. Fixed unnessisary expantion of markdown images not in center channel.

--- a/web/sass-files/sass/partials/_markdown.scss
+++ b/web/sass-files/sass/partials/_markdown.scss
@@ -8,11 +8,14 @@
 		margin-left: 4px;
 	}
 }
-.markdown-inline-img {
-    -moz-force-broken-image-icon: 1;
-    max-height: 500px;
-    height: 500px;
+#post-list {
+    .markdown-inline-img {
+        -moz-force-broken-image-icon: 1;
+        max-height: 500px;
+        height: 500px;
+    }
 }
+
 .post-body {
 	hr {
 		height: 4px;
